<resources>
    <string name="app_name">Top News</string>
    <string name="error_message">
        It seems that you have lost your network connection. Please try again later.
    </string>
    <string name="nodata_message">Sorry..no News found</string>
    <string name="bbc">BBC News</string>
    <string name="bbc_source">bbc-news</string>
    <string name="aljazeera">Al Jazeera English</string>
    <string name="aljazeera_source">al-jazeera-english</string>
    <string name="cnn">CNN</string>
    <string name="cnn_source">cnn</string>
    <string name="bbc_sport">BBC Sport</string>
    <string name="bbc_sport_source">bbc-sport</string>
    <string name="daily_mail">Daily Mail</string>
    <string name="daily_mail_source">daily-mail</string>
    <string name="the_washington_post">The Washington Post</string>
    <string name="the_washington_post_source">the-washington-post</string>
    <string name="reuters">Reuters</string>
    <string name="reuters_source">reuters</string>
    <string name="nbc">NBC News</string>
    <string name="nbc_source">nbc-news</string>
    <string name="header">navigation header</string>
    <string name="sub">powered by NewsApi</string>
    <string name="image">news image</string>
    <string name="action_share">Share</string>
    <string name="read_button">Read full news</string>
    <string name="send_button">Send</string>
    <string name="comment">Comments:</string>
    <string name="write_comment">write your comment here</string>
    <string name="sign_out">Sign Out</string>
    <string name="browse">Browse</string>
    <string name="others">Others</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="title_widget">Top News</string>
    <string name="user">verified user</string>



</resources>
