<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout

            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar

                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        style="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name" />
                    <TextView
                        android:id= "@+id/source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        style="?android:attr/textAppearanceMedium"
                        android:text="@string/bbc"
                        />

                </LinearLayout>



            </androidx.appcompat.widget.Toolbar>



        </com.google.android.material.appbar.AppBarLayout>


        <!-- layout here -->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout

            android:id="@+id/swipeRefresh"

            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:fitsSystemWindows="true"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/recyclerView"

            android:layout_width="match_parent"

            android:layout_height="match_parent" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textSize="20sp"
                android:visibility="invisible" />

        </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_View"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header_main"
        app:menu="@menu/activity_main_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>